# all-one

./: docker-compose.yml  package-lock.json  package.json  repomix-output.xml
erp-backend/: Dockerfile  pyproject.toml
erp-backend/alembic/: env.py
erp-backend/app/: main.py
erp-backend/app/core/: config.py
erp-backend/app/modules/raffles/: .dockerignore  .gitignore  Dockerfile  create_first_user.py  main.py  package-lock.json  pyproject.toml  requirements.txt
erp-backend/app/modules/raffles/app/api/: dependencies.py
erp-backend/app/modules/raffles/app/api/v1/: __init__.py  auth.py  raffles.py  tickets.py  uploads.py
erp-backend/app/modules/raffles/app/assets/: download.jfif
erp-backend/app/modules/raffles/app/core/: config.py  security.py
erp-backend/app/modules/raffles/app/db/: base.py  database.py  models.py
erp-backend/app/modules/raffles/app/db/repositories/: raffle.py  ticket.py
erp-backend/app/modules/raffles/app/models/: __init__.py
erp-backend/app/modules/raffles/app/schemas/: raffle.py  ticket.py  user.py
erp-backend/app/modules/raffles/app/services/: auth.py  generate_image.py  raffle_service.py  send_whatsapp_message.py  ticket_service.py
erp-backend/app/modules/raffles/app/utils/: cleanup.py  test_data.py
erp-backend/app/modules/raffles/scripts/: start.sh
erp-backend/app/modules/users/: api.py  models.py
erp-frontend/: .dockerignore  Dockerfile  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
erp-frontend/src/: App.jsx  main.jsx
erp-frontend/src/core/api/: apiClient.js
erp-frontend/src/core/components/: SubscriberTable.jsx
erp-frontend/src/core/components/layout/: MainLayout.jsx  ModuleShell.jsx
erp-frontend/src/core/components/ui/: AppDataGrid.jsx  KpiCard.jsx  PageHeader.jsx  app-data-grid.css
erp-frontend/src/core/contexts/: AuthContext.jsx  ThemeModeContext.jsx
erp-frontend/src/core/navigation/: menuConfig.js
erp-frontend/src/modules/admin/components/: ModuleTable.jsx  SubscriberTable.jsx
erp-frontend/src/routes/: ProtectedRoute.jsx  index.jsx
erp-frontend/src/theme/: index.js  theme.js
erp-frontend_1/: Dockerfile
erp-frontend_1/src/: App.js  index.js
erp-frontend_1/src/core/api/: apiClient.js  authService.js
erp-frontend_1/src/core/contexts/: AuthContext.js
erp-frontend_1/src/core/styles/: global.css
erp-frontend_1/src/routes/: ProtectedRoute.js  index.js
(+64 files in other folders)
