 [tool.poetry]
name = "erp-backend"
version = "0.1.0"
description = "Backend for the ERP System"
authors = ["César A. Arango <ceau.0612@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
pydantic = {extras = ["email"], version = ">=2.11.3,<3.0.0"}
sqlalchemy = ">=2.0.31,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-multipart = ">=0.0.9,<0.0.10"
asyncpg = ">=0.29.0,<0.30.0"
gunicorn = ">=22.0.0,<23.0.0"
alembic = ">=1.13.2,<2.0.0"
pydantic-settings = ">=2.4.0,<3.0.0"
pillow = ">=10.5.0,<11.0.0"
pytz = ">=2024.1,<2025.0"
python-dateutil = ">=2.9.0,<3.0.0"
greenlet = ">=3.0.3,<4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
